option('profile', type: 'combo', choices: ['default', 'devel'], value: 'default', description: 'whether this is a development build')

option('shell', type: 'boolean', value: true, description: 'whether Shell support is requested')
option('previewer', type: 'boolean', value: true, description: 'whether Previewer support is requested')
option('thumbnailer', type: 'boolean', value: true, description: 'whether Thumbnailer support is requested')
option('nautilus', type: 'boolean', value: true, description: 'whether Nautilus support is requested')

option('comics', type: 'feature', value: 'auto', description: 'whether Comics support is requested')
option('djvu', type: 'feature', value: 'auto', description: 'whether DJVU support is requested')
option('pdf', type: 'feature', value: 'enabled', description: 'whether PDF support is requested')
option('tiff', type: 'feature', value: 'auto', description: 'whether TIFF support is requested')

option('tests', type: 'boolean', value: true, description: 'whether to build tests')
option('documentation', type: 'boolean', value: true, description: 'whether developer documentation reference is requested. Requires gi-docgen')
option('user_doc', type: 'boolean', value: true, description: 'whether User documentation is requested')
option('introspection', type: 'feature', value: 'auto', description : 'Build introspection data (requires gobject-introspection)')
option('sysprof', type: 'feature', value: 'auto', description : 'whether sysprof support is requested')
option('keyring', type: 'feature', value: 'enabled', description: 'whether keyring support is requested')
option('gtk_unix_print', type: 'feature', value: 'auto', description: 'whether gtk+-unix-print support is requested')
option('spell_check', type: 'feature', value: 'auto', description: 'whether spell check support is requested')
option('file_tests', type: 'boolean', value: true, description: 'Enable tests for libview')
